--- a/website/lectures/stat479_refs.bib
+++ b/website/lectures/stat479_refs.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Sameer Deshpande at 2025-07-24 11:54:13 -0500 
+%% Created for Sameer Deshpande at 2025-07-28 19:22:32 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Baumer2015_openWAR,
+	author = {Benjamin S. Baumer and Shane T. Jensen and Gregory J. Matthews},
+	date-added = {2025-07-28 19:21:23 -0500},
+	date-modified = {2025-07-28 19:22:32 -0500},
+	journal = {Journal of Quantitative Analysis in Sports},
+	number = {2},
+	title = {{openWAR}: An open source system for evaluating overall player performance in {Major League Baseball}},
+	volume = {11},
+	year = {2015}}
 
 @book{Lindley_decision,
 	author = {Dennis Lindley},
